add normalize and update

--- a/index/index.html
+++ b/index/index.html
@@ -10,9 +10,9 @@
     <!-- Стили -->
    
     <!-- Приводим стили к общему виду с помощью https://github.com/necolas/normalize.css -->
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="normalize.css">
    
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome иконки -->
     <script src="https://kit.fontawesome.com/4a23243fb41.js" crossorigin="anonymous"></script>
@@ -110,7 +110,7 @@
 
         <!-- Главный контент -->
         <main class="main-content">
-            <!-- Все содержимое страниц надо помещать здесь -->
+            <span>Статистика</span>
         </main>
 
 
